feat: add github link in homepage

--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -12,7 +12,14 @@
     "/articles": "_artikel"
   },
   "/": {
-    "greeting": "Halo! Saya"
+    "greeting": "Halo! Saya",
+    "code_comment": "// web ini juga bisa diakses di halaman GitHub saya",
+    "code_github": [
+      "const ",
+      "githubLink ",
+      "= ",
+      "https://github.com/dimashpt/dimashpt"
+    ]
   },
   "/about": {
     "greeting": "Halaman Tentang Saya"
