--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,7 +12,14 @@
     "/articles": "_articles"
   },
   "/": {
-    "greeting": "Hi There! I am"
+    "greeting": "Hi There! I am",
+    "code_comment": "// you can also see it on my GitHub page",
+    "code_github": [
+      "const ",
+      "githubLink ",
+      "= ",
+      "https://github.com/dimashpt/dimashpt"
+    ]
   },
   "/about": {
     "greeting": "About Page"
