refactor: remove language argument for useTranslation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,13 +5,13 @@
     "role": "Front End Developer"
   },
   "nav": {
-    "/": "_hello",
-    "/about": "_about.me",
-    "/contact": "_contact",
-    "/projects": "_projects",
-    "/articles": "_articles"
+    "home": "_hello",
+    "about": "_about.me",
+    "contact": "_contact",
+    "projects": "_projects",
+    "articles": "_articles"
   },
-  "/": {
+  "home": {
     "greeting": "Hi There! I am",
     "code_comment": "// you can also see it on my GitHub page",
     "code_github": [
@@ -21,16 +21,16 @@
       "https://github.com/dimashpt/dimashpt"
     ]
   },
-  "/about": {
+  "about": {
     "greeting": "About Page"
   },
-  "/contact": {
+  "contact": {
     "greeting": "Contact Page"
   },
-  "/projects": {
+  "projects": {
     "greeting": "Projects Page"
   },
-  "/articles": {
+  "articles": {
     "greeting": "Articles Page"
   }
 }
