--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -5,13 +5,13 @@
     "role": "Front End Developer"
   },
   "nav": {
-    "/": "_halo",
-    "/about": "_tentang.saya",
-    "/contact": "_kontak",
-    "/projects": "_project",
-    "/articles": "_artikel"
+    "home": "_halo",
+    "about": "_tentang.saya",
+    "contact": "_kontak",
+    "projects": "_project",
+    "articles": "_artikel"
   },
-  "/": {
+  "home": {
     "greeting": "Halo! Saya",
     "code_comment": "// web ini juga bisa diakses di halaman GitHub saya",
     "code_github": [
@@ -21,16 +21,16 @@
       "https://github.com/dimashpt/dimashpt"
     ]
   },
-  "/about": {
+  "about": {
     "greeting": "Halaman Tentang Saya"
   },
-  "/contact": {
+  "contact": {
     "greeting": "Halaman Kontak"
   },
-  "/projects": {
+  "projects": {
     "greeting": "Halaman Project"
   },
-  "/articles": {
+  "articles": {
     "greeting": "Halaman Artikel"
   }
 }
