--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -2,7 +2,8 @@
   "common": {
     "name": "Dimas Hayat Pratama",
     "username": "dimashpt",
-    "role": "Front End Developer"
+    "role": "Front End Developer",
+    "coming_soon": "🚧 Halaman ini sedang dalam pengembangan"
   },
   "nav": {
     "home": "_halo",
@@ -14,7 +15,12 @@
   "home": {
     "greeting": "Halo! Saya",
     "code_comment": "// web ini juga bisa diakses di halaman GitHub saya",
-    "code_github": "const githubLink = \"https://github.com/dimashpt/dimashpt\""
+    "code_github": [
+      "const ",
+      "githubLink ",
+      "= ",
+      "https://github.com/dimashpt/dimashpt"
+    ]
   },
   "about": {
     "menu": {
